Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </h3>
 
 <blockquote>
-<p>A simple yet extensible cache abstraction for the .net framework.</p>
+<p>A simple yet extensible cache abstraction for the .net framework</p>
 </blockquote>
       </section>
       <footer>
