Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
 <p>Here are the projects that are working on at the moment:</p>
 
 <h3>
-<a name="angular-cc-autorefresh" class="anchor" href="#angular-cc-autorefresh"><span class="octicon octicon-link"></span></a><a href="https://github.com/christianacca/angular-cc-autorefresh">angular-cc-autorefresh</a>
+<a name="angular-cc-autorefresh" class="anchor" href="#angular-cc-autorefresh"><span class="octicon octicon-link"></span></a><a href="https://github.com/christianacca/angular-cc-autorefresh/" title="Github project page">angular-cc-autorefresh</a>
 </h3>
 
 <blockquote>
 <p>AngularJS directives to schedule work that refreshes $scope.</p>
 </blockquote>
 
-<h3>
-<a name="cache-abstraction" class="anchor" href="#cache-abstraction"><span class="octicon octicon-link"></span></a><a href="https://github.com/christianacca/Cache-Abstraction">Cache-Abstraction</a>
+<p><strong>Links</strong>:</p>
+
+<ul>
+<li><a href="http://projects.codingmonster.co.uk/angular-cc-autorefresh/">Demo site</a></li>
+<li><a href="https://github.com/christianacca/angular-cc-autorefresh/">Github project page</a></li>
+</ul><h3>
+<a name="cache-abstraction" class="anchor" href="#cache-abstraction"><span class="octicon octicon-link"></span></a><a href="https://github.com/christianacca/Cache-Abstraction/" title="Github project page">Cache-Abstraction</a>
 </h3>
 
 <blockquote>
